3/10/12 #3204, add current score to "game aborted" message
# 1.03.02 (62081) Mar 2, 2012
3/2/12 dev version with data-collection change requests
3/1/12 #3204, sim-sharing: eliminate spurious "gameChallenge created" message on startup
3/1/12 #3204, sim-sharing: when Check button is pressed, indicate whether the answer is correct, and how many attempts
3/1/12 #3204, sim-sharing: reuse enums from phetcommon and game packages
3/1/12 #3204, sim-sharing: add message for "game aborted"
# 1.03.01 (61866) Feb 28, 2012
2/28/12 #3204, first dev version with data-collection feature
2/27/12 #3204, add study version to build.properties file
2/27/12 #3204, sim-sharing message when "invalid value" dialog is opened for spinners
2/27/12 #3267, sim-sharing fix for spinners
2/27/12 #3204, cleaned up UserComponent for radio buttons in tabs 1 & 2
2/27/12 #3204, send model message when a new challenge is started in game
2/27/12 #3204, use plaintext (no html) for substance names in sim-sharing messages, to improve readability
2/27/12 #3204, sim-sharing for custom radio buttons in Game Settings panel
2/27/12 #3204, sim-sharing for game buttons
2/27/12 print reactions for each level via the Developer menu
2/2/12 sim-sharing: add all of the easy stuff for data collection
2/2/12 #3204, sim-sharing: replace odd user-component classes with enums and chaining
1/3/12 #3202, sim-sharing changes related to Swing controls
10/20/11 set game "Start" button color to yellow, to be consistent with "attention" color used through game
# 1.03.00 (52708) Jun 6, 2011
6/6/11 > added new translation credits features
# 1.02.02 (52602) Jun 2, 2011
2/16/11 #2727, rewrite GameSettings to use properties exclusively, remove old-style constructors and accessor methods
1/10/11 move IntegerSpinner to phetcommon
12/15/10 #2614, move license.txt files into image subdirectories
# 1.02.01 (47115) Dec 13, 2010
12/13/10 change points in game: +2 if correct on first try, +1 on second try
# 1.02.00 (45305) Oct 21, 2010